Move camera back to offset after a few seconds without inputs

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
     },
     "dotnet.defaultSolution": "unity-racing-game.sln",
     "cSpell.words": [
-        "Mathf"
+        "Mathf",
+        "Slerp"
     ]
 }
