--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
     },
     "dotnet.defaultSolution": "unity-racing-game.sln",
     "cSpell.words": [
+        "Lerp",
         "Mathf",
         "Slerp"
     ]
